k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-dep
  labels:
    app: go-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      name: go-web-app-pod
      labels:
        app: go-web-app
    spec:
      containers:
        - name: go-web-app
          image: shyam30/go-web-app:v5
          ports:
            - containerPort: 8080
