k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
spec:
  selector:
    app: go-web-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
