k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "devbaba.shop"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go-web-app-service
                port:
                  number: 8080
